samples/_failures_safe/1761537254_f61058_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34ec1572.c: In function ‘main’:
./samples/SAFE/__tmp_34ec1572.c:177:5: error: expected expression at end of input
  177 |     int pos =
      |     ^~~
./samples/SAFE/__tmp_34ec1572.c:177:5: error: expected declaration or statement at end of input
